# jsoo-fullstack

./: .gitignore  Makefile  README.md  dune-project  jsoo-fullstack.opam  jsoo-fullstack.opam.template  package.json  webpack.config.js
public/: index.html
src/: .ocamlformat
src/frontends/browser/: dune  main.ml  react-requires.js
src/server/: dune  express.mli  main.ml
src/shared/: dune
src/shared/ui/: app.ml  dune  footer.ml  header.ml  link.ml  link.mli  react-requires.js  security.ml  shape.ml  utils.ml
